# digitizer-test

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: fw-ci.yml  sw-ci.yml
fw/: CMakeLists.txt  README.md
fw/cmake/: AddHDLFile.cmake  AddLatticeTarget.cmake  GetHDLDependencies.cmake  GetHDLSourcesFromHDLDependencies.cmake
fw/src/: CMakeLists.txt  digitizer.lpf  digitizer.vhdl
fw/src/clock_manager/: CMakeLists.txt  clock_manager.vhdl
fw/src/clock_manager/pll/: CMakeLists.txt  pll.vhdl
fw/src/legos/: CMakeLists.txt
fw/src/legos/comparator/: CMakeLists.txt  comparator.vhdl
fw/src/legos/counter/: CMakeLists.txt  counter.vhdl  counter_pkg.vhdl
fw/src/legos/edge_detector/: CMakeLists.txt  edge_detector.vhdl  edge_detector_pkg.vhdl
fw/src/legos/mux/: CMakeLists.txt  mux.vhdl  mux_pkg.vhdl
fw/src/legos/timer/: CMakeLists.txt  timer.vhdl  timer_pkg.vhdl
fw/src/local_bus_interface/: CMakeLists.txt  local_bus_interface.vhdl  local_bus_interface_pkg.vhdl
fw/src/local_bus_interface/transceiver/: CMakeLists.txt  transceiver.vhdl  transceiver_pkg.vhdl
fw/src/trigger_manager/: CMakeLists.txt  trigger_manager.vhdl  trigger_manager_pkg.vhdl
fw/src/trigger_manager/channel_trigger_n/: CMakeLists.txt  channel_trigger_n.vhdl
fw/src/trigger_manager/coincidence/: CMakeLists.txt  coincidence.vhdl  coincidence_pkg.vhdl
hw/: README.md
sw/: CMakeLists.txt  README.md
sw/lib/: CMakeLists.txt  digitizer.c  digitizer.h
sw/test/: CMakeLists.txt  test.c
